Version 2.02.57 -
====================================
  Properly decode flags even for VG locks.
  Properly handle precommitted flag in cache when commited data only present.
  Resume renamed volumes in reverse order to preserve memlock pairing.
  Drop metadata cache after device was autorepaired and removed from VG.
  Remove missing flag in metadata if PV reappeared and is empty.
  Destroy allocated mempool in _vg_read_orphans() error path.
  Fix unlocking vg in some pvresize and toollib error paths.
  Explicitly call suspend for temporary mirror layer.
  Allow use precommited metadata when a PV is missing.
  Add memlock information to do_lock_lv debug output.
  Never use distributed lock for LV in non-clustered VG.
  Allow implicit lock conversion in pre/post callbacks on local node.
  Allow implicit convert to the same cluster lock mode.
  Replace magic masks in cluster locking code by defined masks.
  Remove log volume from metadata if initial deactivation fails.
  Give better error message for pvmove when all data is skipped.
  Fix memory lock imbalance in lv_suspend if already suspended.
  Fix pvmove test mode to not fail and do not poll.
  Fix error message if VG already exist in vgcreate.
  Fix tools to use log_error when stopped by user.
  Fix lvcreate --readahead.
  Fix clvmd memory leak in lv_info_by_lvid.
  Do not allow creating mirrors of more than 8 images.
  Use locking_type 3 (compiled in cluster locking) in lvmconf.
  Remove duplicate dm_list macros and functions.
  Log failure type and recognise type 'F' (flush) in dmeventd mirror plugin.
  Extend internal PV/VG/LV/segment status variables from 32-bit to 64-bit.

Version 2.02.56 - 24th November 2009
====================================
  Add missing vg_release to pvs and pvdisplay to fix memory leak.
  Do not try to unlock VG which is not locked in _process_one_vg.
  Move is_long_lived persistent_filter_dump to happen after every full scan.